--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "mongoose": "^8.15.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
-    "nodemon": "^3.1.10",
-    "typescript-eslint": "^8.33.1"
+    "nodemon": "^3.1.10"
   }
 }
