--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@arcjet/inspect": "^1.0.0-beta.8",
     "@arcjet/node": "^1.0.0-beta.8",
+    "@upstash/workflow": "^0.2.13",
     "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
+    "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
